<resources>
    <string name="app_name">Gwell</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_repeat_password">Enter again</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="screenshot">Screenshot</string>
    <string name="mute">Mute</string>
    <string name="talk">Intercom</string>
    <string name="screenshot_success">Screenshot Success</string>
    <string name="screenshot_error">Screenshot faild</string>
    <string name="title_activity_special_login">Sign in</string>
    <string name="login_formax">Login support mailbox, mobile phone number (must be with country code eg: 86-18922222222), user ID</string>
    <string name="device_test">Equipment physical examination</string>
    <string name="serche">Search the local area network</string>
    <string name="moniter">monitor</string>
    <string name="test_ui">Test page</string>
    <string name="play_back">Playlist</string>
    <string name="record_title">Playback</string>
    <string name="loading">loading...</string>
    <string name="select_device">Please select the device...</string>
    <string name="input_deviceid">Please enter the device ID</string>
    <string name="input_devicepwd">Please enter the device password</string>
    <string name="notnull">Account number and password can not be empty, please re-enter</string>
    <string name="failed">Failed to get</string>
    <string name="title_activity_play_back">PlayBackActivity</string>
    <string name="playback">Start playback</string>
    <string name="get_play_back">Get the playlist</string>
    <string name="sd_notexist">SD card does not exist</string>
    <string name="action_sign_in">log in</string>
    <string name="sd">SD</string>
    <string name="hd">HD</string>
    <string name="ld">LD</string>
    <string name="alrmpicture">Get the alarm picture</string>
    <string name="getpicture">Get the picture</string>
    <string name="function_tips">This feature requires device support</string>
    <string name="register">register</string>
    <string name="title_activity_register">Email register</string>
    <string name="register_format">Must enter the correct email format,the new password must be 6 to 30 contain letters, Numbers, characters</string>
    <string name="alert">P2p not connected，please try again！</string>
    <string name="no_alarm">Not rececive Alarm Message!</string>
    <string name="alarm_tip2">Make sure the login account is already in the device\'s push list</string>
    <string name="alarmtip3">Make sure the equipment is armed</string>
    <string name="download_success">download success</string>
    <string name="ok">OK</string>
    <string name="test">Test</string>
    <string name="downloading">downloading</string>
    <string name="error">Error</string>
    <string name="record">record</string>
    <string name="stop_record">Stop Record</string>
    <string name="sensor">Sensor</string>
    <string name="start_pair">Learning pairing</string>
    <string name="device_not_support">Device not support!</string>
    <string name="password_wrong">Wrong password</string>
    <string name="net_error">Net error</string>
    <string name="permission_denied">Permission denied</string>
    <string name="learn_success">Learn success</string>
    <string name="clear_success">Clear success</string>
    <string name="already_added">Already added</string>
    <string name="operation_failure">Operation failure</string>
    <string name="code_learned">The code has learned</string>
    <string name="channel_learned">The channel has learned</string>
    <string name="learning">Learning</string>
    <string name="learn_out_time">Learn out time</string>
    <string name="code_invalid">Code invalid</string>
    <string name="btn_playback">Playback</string>
    <string name="alarm_sum">Article alarm, a total of %d</string>
    <string name="alarm_list">imagesPart</string>
    <string name="setlog">Set up the log port</string>
    <string name="stop_sendlog">Stop sending</string>
    <string name="searching">Searching,please wait</string>
    <string name="device_send_ack">An order has been received by device.</string>
    <string name="busy">Device is busy</string>
    <string name="parems_error">Parameter error</string>
    <string name="not_surpport">Not support</string>
    <string name="test_log">Start testing</string>
    <string name="frush">Refresh manually</string>
    <string name="netaddress_error">DNS abnormal</string>
    <string name="wait_label">Device is doing self-test which needs around 2 minutes...</string>
    <string name="tips2">After 2 minutes later,please select all the contents and copy them then send to %s or customer service people</string>
    <string name="serialapp">SerialApp</string>
    <string name="alarm_email">Alarm email</string>
    <string name="email_alarm_remind">The mailbox alarm premise: 1. The device is in the state of the protection to obtain the alarm information, 2.the E-mail has opened the SMTP service (SMTP service is opened as follows：\n http://jingyan.baidu.com/article/f71d60376ad4561ab641d1ec.html)</string>
    <string name="receiver_hint">The recipient (for example, multiple mailboxes, please separate them from commas)</string>
    <string name="sender_hint">Sender (please enter the sender\'s mailbox)</string>
    <string name="smtp_or_psw">Password or SMTP authorization code</string>
    <string name="smtp_addr">SMTP address (for example, with multiple addresses, separated by commas)</string>
    <string name="port_hint">Port number: 25 (unencrypted), 465 (SSL), 587 (TLS), or custom</string>
    <string name="encryption_hint">Encryption: 0 (not encrypted), 1 (SSL encryption), 2 (TLS encryption)</string>
    <string name="not_empty">can not be blank</string>
    <string name="receiver_too_much">overmail</string>
    <string name="email_format_error">The email format is incorrect</string>
    <string name="sender_not_empty">Send a mailbox not empty</string>
    <string name="sender_only_one">Sending a mailbox is only the only one</string>
    <string name="smtp_or_pwd_not_empty">Password or SMTP authorization code cannot be empty</string>
    <string name="smtp_addr_not_empty">SMTP address not empty</string>
    <string name="smtp_addr_too_much">SMTP address too much</string>
    <string name="smtp_addr_error">SMTP address error</string>
    <string name="port_not_empty">The port number cannot be empty</string>
    <string name="port_limit">The port number is between 0 and 65535</string>
    <string name="email_no_verify">The mailbox is not verified, please make sure that the mailbox has opened SMTP service!!</string>
    <string name="device_psw_error">Device error</string>
    <string name="alarm_switch">Receiving alarm push</string>
    <string name="alarm_setting">Alarm setting</string>
    <string name="motion_switch">motion detection</string>
    <string name="defence_switch">Cloth removal</string>
    <string name="setting_succeed">Setting succeed！</string>
    <string name="setting_failure">Setting failure!</string>
    <string name="alarm_on_to_off">The receiving alarm push switch is closing</string>
    <string name="alarm_off_to_on">The receiving alarm push switch is on</string>
    <string name="alarm_num_limit">Alarm reception has been capped</string>
    <string name="denfence_to_not">The equipment has been deployed and is being removed</string>
    <string name="not_to_denfence">The equipment has been removed and is being guarded</string>
    <string name="motion_on_to_off">The motion detection switch is on and is closing</string>
    <string name="motion_off_to_on">The mobile detection switch is off and is on</string>
    <string name="tips_idpwd">Please enter device ID and password</string>
    <string name="shake_task_running">The task is executing</string>
    <string name="shake_task_complete">Search task complete</string>
    <string name="aliplay">Live test</string>
    <string name="send_serialApp">Send serial port information (string)</string>
    <string name="send_serialApp_bytes">Send serial pass-through information (byte array)</string>
    <string name="input_true_format">Please type in the prompt format</string>
    <string name="input_cmd_string">Input command (string)</string>
    <string name="input_cmd_bytes">Input command (byte array (use, separate))</string>
    <string name="floatview">Suspension window test</string>
    <string name="pano_monitor">Panoramic monitoring</string>
    <string name="title_activity_contact_info">ContactInfoActivity</string>
    <string name="four_split">four split</string>
    <string name="two_split">two split</string>
    <string name="mix">mix</string>
    <string name="column">column</string>
    <string name="circle">circle</string>

</resources>
