<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/tx_device_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_deviceid" />

    <EditText
        android:id="@+id/tx_device_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_devicepwd" />

    <Button
        android:id="@+id/tx_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_play_back" />

    <TextView
        android:id="@+id/tx_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/loading" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rc_recordfiles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
</LinearLayout>