<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tx_userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tx_alarmid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tx_alarm_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_getpicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getpicture"/>
    <TextView
        android:id="@+id/tx_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/FF0000"
        android:text="@string/function_tips"/>
    <TextView
        android:id="@+id/tx_tips_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/FF0000"
        android:text="@string/alarm_tip2"/>
    <TextView
        android:id="@+id/tx_tips_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/FF0000"
        android:text="@string/alarmtip3"/>
    <ImageView
        android:id="@+id/iv_alarmpicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>