<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dansesshou.jcentertest.AlarmSettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/ll_height"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_alarm_switch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/alarm_switch" />

                <ProgressBar
                    android:layout_gravity="right"
                    android:id="@+id/alarm_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                   />

                <Switch
                    android:id="@+id/switch_alarm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    android:textOff="off"
                    android:textOn="on"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/ll_height"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_defence_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/defence_switch" />

                <ProgressBar
                    android:layout_gravity="right"
                    android:id="@+id/defence_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                     />

                <Switch
                    android:id="@+id/switch_defence"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    android:textOff="off"
                    android:textOn="on"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/ll_height"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_motion_switch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/motion_switch" />

                <ProgressBar
                    android:layout_gravity="right"
                    android:id="@+id/motion_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                 />

                <Switch
                    android:id="@+id/switch_motion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    android:textOff="off"
                    android:textOn="on"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
